--- a/Classes/SPDEs.ipynb
+++ b/Classes/SPDEs.ipynb
@@ -11,12 +11,14 @@
     "import math\n",
     "from tqdm import tqdm\n",
     "from time import time\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "%run Noise.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +30,7 @@
     "        self.IC_t = IC_t # Initial condition for the time derivative\n",
     "        self.mu = mu # drift term in case of Parabolic or noise free term in case of Elliptic\n",
     "        self.sigma = sigma # sigma(u)*xi\n",
-    "        self.BC = BC #Boundary condition 'D' - Dirichlet, 'N' - Neuman, 'P' - periodic\n",
+    "        self.BC = BC # Boundary condition 'D' - Dirichlet, 'N' - Neuman, 'P' - periodic\n",
     "        self.eps = eps # viscosity\n",
     "        self.X = X # discretization of space (O_X space)\n",
     "        self.T = T # discretization of time (O_T space)\n",
@@ -174,7 +176,7 @@
     "        # M*(current.reshape(...)) does not give the correct value.\n",
     "        \n",
     "        \n",
-    "        return Solution\n",
+    "        return Solution.astype('float32')\n",
     "    \n",
     "    # Solves 1D stochasrtic Wave equation, given numpy array of several noises and space time domain\n",
     "    def Wave(self, W, T = None, X = None, diff = True):\n",
@@ -203,7 +205,7 @@
     "            Solution_t[:,i,:] = Solution_t[:,i-1,:] + np.dot(Solution[:,i-1,:].reshape((W.shape[0], len(X))), A)  + self.mu_(Solution[:,i-1,:]) * dt + self.sigma_(Solution[:,i-1,:]) * dW[:,i,:]\n",
     "            Solution[:,i,:] = Solution[:,i-1,:] + Solution_t[:,i,:]*dt\n",
     "            \n",
-    "        return Solution\n",
+    "        return Solution.astype('float32')\n",
     "    \n",
     "    # Solves 1D Burger's equation, given numpy array of several noises, space time domain and initial conditions\n",
     "    def Burgers(self, W, lambd = 1, diff = True, T = None, X = None, KdV = False):    \n",
@@ -247,7 +249,7 @@
     "            current = Solution[:,i-1,:] - lambd*Solution[:,i-1,:]*self.discrete_diff(Solution[:,i-1,:], len(X), flatten = False, higher = False)*dt/dx + self.sigma_(Solution[:,i-1,:]) * dW[:,i,:]\n",
     "            Solution[:,i,:] = np.dot(current.reshape((W.shape[0], len(X))), M)\n",
     "            \n",
-    "        return Solution\n",
+    "        return Solution.astype('float32')\n",
     "    \n",
     "    # Function that integrates trees required for the model. It applies operator I in paralel to many functions\n",
     "    # where I[f] is a solution to (\\partial_t - eps*\\Delta) I[f] = f with zero IC.\n",
@@ -255,7 +257,8 @@
     "    def Integrate_Parabolic_trees(self, tau, done = {}, exceptions = {}, derivative = False):\n",
     "    \n",
     "        #extract the trees from dictionary which are not purely polyniomials and were not already integrated\n",
-    "        trees = [tree for tree in tau.keys() if 'I[{}]'.format(tree) not in done and 'I[{}]'.format(tree) not in exceptions] \n",
+    "        trees = [tree for tree in tau.keys() if tree not in exceptions]\n",
+    "        trees = [tree for tree in trees if 'I[{}]'.format(tree) not in done and 'I[{}]'.format(tree) not in exceptions] \n",
     "\n",
     "        dt, dx = self.T[1]-self.T[0], self.X[1]-self.X[0] \n",
     "        \n",
@@ -264,16 +267,16 @@
     "\n",
     "        taus = np.array([tau[t] for t in trees])\n",
     "\n",
-    "        integrated = np.zeros(shape = (len(trees), len(self.T), len(self.X)))\n",
+    "        integrated = np.zeros(shape = (len(trees), len(self.T), len(self.X))).astype('float32')\n",
     "        \n",
     "        # Finite difference method.\n",
-    "        # Compute M*(integrated[i-1]+taus[i]). M^T (transpose) and reshaping for the same reason as in Parabolic_many\n",
+    "        # Compute M*(integrated[i-1]+taus[i]*dt). M^T (transpose) and reshaping for the same reason as in Parabolic_many\n",
     "        for i in range(1,len(self.T)): \n",
     "            integrated[:,i,:] = np.dot((integrated[:,i-1,:] + taus[:,i,:] * dt).reshape((len(trees), len(self.X))), M)\n",
     "        \n",
     "        Jtau = {}\n",
-    "        for i, t in enumerate(trees): #update dictionary and return integrated taus.\n",
-    "            Jtau['I[{}]'.format(t)] = integrated[i]\n",
+    "        for i, t in enumerate(trees): # update dictionary and return integrated taus.\n",
+    "            Jtau['I[{}]'.format(t)] = integrated[i].astype('float32')\n",
     "            if derivative and \"I'[{}]\".format(t) not in exceptions:\n",
     "                # If derivative is true include also functions of the form \\partial_x I[f] that are denoted as I'[f]\n",
     "                if derivative == 1 or derivative is True:\n",
@@ -281,6 +284,10 @@
     "                else:\n",
     "                    # centralised differentiation\n",
     "                    Jtau[\"I'[{}]\".format(t)] = self.discrete_diff(integrated[i], len(self.X), flatten = False, higher = True)/dx\n",
+    "        \n",
+    "        del integrated\n",
+    "        del taus\n",
+    "        \n",
     "        return Jtau\n",
     "    \n",
     "    # Function that integrates trees required for the model. It applies operator I in paralel to many functions\n",
@@ -289,7 +296,8 @@
     "    def Integrate_Wave_trees(self, tau, done = {}, exceptions = {}, derivative = False):\n",
     "        \n",
     "        #extract the trees from dictionary which are not purely polyniomials and were not already integrated\n",
-    "        trees = [tree for tree in tau.keys() if 'I[{}]'.format(tree) not in done and 'I[{}]'.format(tree) not in exceptions] \n",
+    "        trees = [tree for tree in tau.keys() if tree not in exceptions]\n",
+    "        trees = [tree for tree in trees if 'I[{}]'.format(tree) not in done and 'I[{}]'.format(tree) not in exceptions] \n",
     "\n",
     "        dt, dx = self.T[1]-self.T[0], self.X[1]-self.X[0] \n",
     "        \n",
@@ -299,8 +307,8 @@
     "        taus = np.array([tau[t] for t in trees])\n",
     "        \n",
     "        # Initialize placeholders for I[f] and \\partial_t I[f]\n",
-    "        integrated = np.zeros(shape = (len(trees), len(self.T), len(self.X)))\n",
-    "        integrated_t = np.zeros(shape = (len(trees), len(self.T), len(self.X)))\n",
+    "        integrated = np.zeros(shape = (len(trees), len(self.T), len(self.X))).astype('float32')\n",
+    "        integrated_t = np.zeros(shape = (len(trees), len(self.T), len(self.X))).astype('float32')\n",
     "        \n",
     "        # Finite difference method.\n",
     "        # Solve wave equation as a system for (integrated, integrated_t)\n",
@@ -311,13 +319,18 @@
     "            \n",
     "        Jtau = {}\n",
     "        for i, t in enumerate(trees): #update dictionary and return integrated taus.\n",
-    "            Jtau['I[{}]'.format(t)] = integrated[i]\n",
+    "            Jtau['I[{}]'.format(t)] = integrated[i].astype('float32')\n",
     "            if derivative and \"I'[{}]\".format(t) not in exceptions:\n",
     "                # If derivative is true include also functions of the form \\partial_x I[f] that are denoted as I'[f]\n",
     "                if derivative == 1 or derivative is True:\n",
     "                    Jtau[\"I'[{}]\".format(t)] = self.discrete_diff(integrated[i], len(self.X), flatten = False, higher = False)/dx\n",
     "                else:\n",
     "                    Jtau[\"I'[{}]\".format(t)] = self.discrete_diff(integrated[i], len(self.X), flatten = False, higher = True)/dx\n",
+    "        \n",
+    "        del integrated\n",
+    "        del integrated_t\n",
+    "        del taus\n",
+    "        \n",
     "        return Jtau\n",
     "    \n",
     "    #To finish\n",
