--- a/Algorithms/Algorithm_2.ipynb
+++ b/Algorithms/Algorithm_2.ipynb
@@ -122,7 +122,7 @@
     "        \n",
     "        return vec*f(vec)+Max*np.sign(vec)*(np.abs(vec) >= Max)\n",
     "    \n",
-    "    def new_model(self, start, Prediction = None, T = None, X = None, test = None, train = [], time_grid_num = 10):\n",
+    "    def new_model(self, start, Prediction = None, T = None, X = None, test = None, train = [], time_grid_num = 15):\n",
     "        \n",
     "        # Creates models for a given set of initial conditions\n",
     "        \n",
@@ -164,7 +164,7 @@
     "        return M.models\n",
     "\n",
     "    # Create models for training. (Step 1 of Algorith 2)\n",
-    "    def training_models(self, T = None, X = None, train = None, time_grid_num = 10):\n",
+    "    def training_models(self, T = None, X = None, train = None, time_grid_num = 15):\n",
     "        \n",
     "        if T is None: T = self.T\n",
     "        if X is None: X = self.X\n",
@@ -177,9 +177,9 @@
     "        # where m is the number of solutions in the training set, N = len(T) . Overall m*(N-1) initial conditions\n",
     "        \n",
     "        # Initializing IC\n",
-    "        IC = np.array([self.Sol[u, i, :] for u in train for i in range(len(T)-1)])\n",
+    "        IC = np.array([self.Sol[u, i, :] for u in train for i in range(len(T)-1)]).astype('float32')\n",
     "\n",
-    "        W_ = np.zeros((IC.shape[0], time_grid_num+1, len(X))) # No noise is present.\n",
+    "        W_ = np.zeros((IC.shape[0], time_grid_num+1, len(X))).astype('float32') # No noise is present.\n",
     "        \n",
     "        # Compute I_c[u_{t_k}]. Symbolically these will still be denoted by I[xi] in the model.\n",
     "        \n",
@@ -190,7 +190,7 @@
     "        \n",
     "        # Add \\partial_c I_c[u^pr_{t_k}] which will be symbolically denoted by I'[xi]\n",
     "        if self.diff:\n",
-    "            lollipop_diff = [SPDE().discrete_diff(lol, N = len(X), flatten=False, higher = False)/dx for lol in lollipop]\n",
+    "            lollipop_diff = [SPDE().discrete_diff(lol, N = len(X), flatten=False, higher = False).astype('float32')/dx for lol in lollipop]\n",
     "\n",
     "        M = Model(I, self.R, self.H, self.deg, derivative = self.diff)\n",
     "        \n",
