--- a/Classes/Noise.ipynb
+++ b/Classes/Noise.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,14 @@
     "import pandas as pd\n",
     "import math\n",
     "from tqdm import tqdm\n",
-    "from time import time"
+    "from time import time\n",
+    "import seaborn as sns\n",
+    "import torch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,13 +62,16 @@
     "    \n",
     "    # Funciton for creating N random initial conditions of the form \n",
     "    # \\sum_{i = -p}^{i = p} a_k sin(k*\\pi*x/scale)/ (1+|k|^decay) where a_k are i.i.d standard normal.\n",
-    "    def initial(self, N, X, p = 10, decay = 2, scaling = 1):\n",
+    "    def initial(self, N, X, p = 10, decay = 2, scaling = 1, Dirichlet = False):\n",
     "        scale = max(X)/scaling\n",
     "        IC = []\n",
     "        SIN = np.array([[np.sin(k*np.pi*x/scale)/((np.abs(k)+1)**decay) for k in range(-p,p+1)] for x in X])\n",
     "        for i in range(N):\n",
     "            sins = np.random.normal(size = 2*p+1)\n",
-    "            extra = np.random.normal(size = 1)\n",
+    "            if Dirichlet:\n",
+    "                extra = 0\n",
+    "            else:\n",
+    "                extra = np.random.normal(size = 1)\n",
     "            IC.append(np.dot(SIN, sins)+extra)\n",
     "            # enforcing periodic boundary condition without error\n",
     "            IC[-1][-1] = IC[-1][0]\n",
@@ -87,7 +92,102 @@
     "        Data = pd.read_csv(name, index_col = 0, header = [0,1])\n",
     "        Data.columns = pd.MultiIndex.from_product([['W'+str(i+1) for i in range(Data.columns.levshape[0])], np.asarray(Data['W1'].columns, dtype = np.float16)])\n",
     "        \n",
-    "        return Data"
+    "        return Data\n",
+    "\n",
+    "class GaussianRF(object):\n",
+    "\n",
+    "    def __init__(self, dim, size, alpha=2, tau=3, sigma=None, boundary=\"periodic\", device=None):\n",
+    "\n",
+    "        self.dim = dim\n",
+    "        self.device = device\n",
+    "\n",
+    "        if sigma is None:\n",
+    "            sigma = tau**(0.5*(2*alpha - self.dim))\n",
+    "\n",
+    "        k_max = size//2\n",
+    "\n",
+    "        if dim == 1:\n",
+    "            k = torch.cat((torch.arange(start=0, end=k_max, step=1, device=device), \\\n",
+    "                           torch.arange(start=-k_max, end=0, step=1, device=device)), 0)\n",
+    "\n",
+    "            self.sqrt_eig = size*math.sqrt(2.0)*sigma*((4*(math.pi**2)*(k**2) + tau**2)**(-alpha/2.0))\n",
+    "            self.sqrt_eig[0] = 0.0\n",
+    "\n",
+    "        elif dim == 2:\n",
+    "            wavenumers = torch.cat((torch.arange(start=0, end=k_max, step=1, device=device), \\\n",
+    "                                    torch.arange(start=-k_max, end=0, step=1, device=device)), 0).repeat(size,1)\n",
+    "\n",
+    "            k_x = wavenumers.transpose(0,1)\n",
+    "            k_y = wavenumers\n",
+    "\n",
+    "            self.sqrt_eig = (size**2)*math.sqrt(2.0)*sigma*((4*(math.pi**2)*(k_x**2 + k_y**2) + tau**2)**(-alpha/2.0))\n",
+    "            self.sqrt_eig[0,0] = 0.0\n",
+    "\n",
+    "        elif dim == 3:\n",
+    "            wavenumers = torch.cat((torch.arange(start=0, end=k_max, step=1, device=device), \\\n",
+    "                                    torch.arange(start=-k_max, end=0, step=1, device=device)), 0).repeat(size,size,1)\n",
+    "\n",
+    "            k_x = wavenumers.transpose(1,2)\n",
+    "            k_y = wavenumers\n",
+    "            k_z = wavenumers.transpose(0,2)\n",
+    "\n",
+    "            self.sqrt_eig = (size**3)*math.sqrt(2.0)*sigma*((4*(math.pi**2)*(k_x**2 + k_y**2 + k_z**2) + tau**2)**(-alpha/2.0))\n",
+    "            self.sqrt_eig[0,0,0] = 0.0\n",
+    "\n",
+    "        self.size = []\n",
+    "        for j in range(self.dim):\n",
+    "            self.size.append(size)\n",
+    "\n",
+    "        self.size = tuple(self.size)\n",
+    "\n",
+    "    def sample(self, N):\n",
+    "\n",
+    "        coeff = torch.randn(N, *self.size, 2, device=self.device)\n",
+    "\n",
+    "        coeff[...,0] = self.sqrt_eig*coeff[...,0]\n",
+    "        coeff[...,1] = self.sqrt_eig*coeff[...,1]\n",
+    "\n",
+    "        u = torch.fft.ifftn(torch.view_as_complex(coeff), dim=[1,2]).real\n",
+    "\n",
+    "        return u\n",
+    "    \n",
+    "def coloured_noise_2d(T, dt, X, N, num_samples, alpha=3, tau=3):\n",
+    "    GRF = GaussianRF(2, N, alpha=alpha, tau=tau)\n",
+    "\n",
+    "    space = GRF.sample(num_samples)\n",
+    "    BM = Noise().BM(0, T, dt, num_samples)[:-1].T\n",
+    "    \n",
+    "    return np.array([np.multiply.outer(BM[i], space[i]) for i in range(num_samples)])\n",
+    "    \n",
+    "    \n",
+    "def get_twod_bj(dt,X,N,alpha):\n",
+    "    \"\"\"\n",
+    "    Alg 10.5 Page 443 in the book \"An Introduction to Computational Stochastic PDEs\"\n",
+    "    \"\"\"\n",
+    "    lambdax = 2 * np.pi * np.arange(- N//2 + 1, N//2 +1) / X\n",
+    "    lambday = lambdax.copy()\n",
+    "    lambdaxx, lambdayy = np.meshgrid(lambdax, lambday)\n",
+    "    root_qj = np.exp(- alpha * (lambdaxx ** 2 + lambdayy ** 2) / 2)\n",
+    "    bj = root_qj * np.sqrt(dt) * N**2 / X\n",
+    "    return bj\n",
+    "\n",
+    "def get_2d_dW(dt,X,N,alpha,num_samples):\n",
+    "    \"\"\"\n",
+    "    Alg 10.6 Page 444 in the book \"An Introduction to Computational Stochastic PDEs\"\n",
+    "    \"\"\"\n",
+    "    bj = get_twod_bj(dt,X,N,alpha)\n",
+    "    shape = (num_samples,N,N)\n",
+    "    nnr, nnc = np.random.standard_normal(size=shape), np.random.standard_normal(size=shape)\n",
+    "    nn = nnr+1.j*nnc\n",
+    "    dW = np.fft.ifft2(bj[None,:,:]*nn,axes=[-2,-1])\n",
+    "    return dW.real\n",
+    "\n",
+    "def get_W(T,dt,X,N,alpha,num_samples):\n",
+    "    M = int(np.ceil(T/dt))\n",
+    "    W = np.zeros([num_samples, M, N, N])\n",
+    "    for i in tqdm(range(1, M)):\n",
+    "        W[:,i,:,:] = get_2d_dW(dt,X,N,alpha,num_samples)\n",
+    "    return np.cumsum(W, axis=1)"
    ]
   },
   {
