burgers experiments with and without noise

--- a/Classes/SPDEs.ipynb
+++ b/Classes/SPDEs.ipynb
@@ -13,7 +13,7 @@
     "from time import time\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "%run Noise.ipynb"
+    "%run Classes/Noise.ipynb"
    ]
   },
   {
@@ -177,6 +177,7 @@
     "        \n",
     "        \n",
     "        return Solution.astype('float32')\n",
+    "        #return Solution\n",
     "    \n",
     "    # Solves 1D stochasrtic Wave equation, given numpy array of several noises and space time domain\n",
     "    def Wave(self, W, T = None, X = None, diff = True):\n",
@@ -206,6 +207,7 @@
     "            Solution[:,i,:] = Solution[:,i-1,:] + Solution_t[:,i,:]*dt\n",
     "            \n",
     "        return Solution.astype('float32')\n",
+    "        #return Solution\n",
     "    \n",
     "    # Solves 1D Burger's equation, given numpy array of several noises, space time domain and initial conditions\n",
     "    def Burgers(self, W, lambd = 1, diff = True, T = None, X = None, KdV = False):    \n",
@@ -250,6 +252,7 @@
     "            Solution[:,i,:] = np.dot(current.reshape((W.shape[0], len(X))), M)\n",
     "            \n",
     "        return Solution.astype('float32')\n",
+    "        #return Solution\n",
     "    \n",
     "    # Function that integrates trees required for the model. It applies operator I in paralel to many functions\n",
     "    # where I[f] is a solution to (\\partial_t - eps*\\Delta) I[f] = f with zero IC.\n",
@@ -358,7 +361,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -372,7 +375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
