--- a/Classes/full_visualization.ipynb
+++ b/Classes/full_visualization.ipynb
@@ -15,10 +15,12 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_absolute_error\n",
     "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.metrics import r2_score\n",
     "from sklearn.svm import SVR\n",
     "from sklearn.linear_model import Lasso, LassoLars, LassoLarsCV, Ridge, LassoCV, RidgeCV, HuberRegressor\n",
     "from sklearn.linear_model import LinearRegression as lin_reg\n",
     "from sklearn import preprocessing\n",
+    "\n",
     "import seaborn as sns\n",
     "\n",
     "err1 = lambda x, y: np.sqrt(mean_absolute_error(x,y))\n",
@@ -191,40 +193,51 @@
     "            P = Prediction[\"S\"+str(self.test[k]+1)].values\n",
     "        return raw(P,S)\n",
     "    \n",
-    "    def errors(self, Solution, Prediction, raw = err2, full = True, show = True, maxi = False):\n",
+    "    def errors(self, Solution, Prediction, raw = err2, full = True, show = True, maxi = False, mini = False):\n",
     "        \n",
     "        # compute full errors between all solution and prediction\n",
     "        \n",
-    "        er, l2, av_er, max_er = 0, 0, 0, 0\n",
+    "        er, l2, av_er, max_er, min_er = 0, 0, 0, 0, math.inf\n",
+    "        error_list = []\n",
     "\n",
     "        for k in range(len(self.test)):\n",
     "            er += self.raw_error(k, Solution, Prediction)\n",
     "            l2 += self.raw_error(k, Solution, None)\n",
-    "            av_er += self.one_error(k, Solution, Prediction)\n",
-    "            max_er = max(max_er, self.one_error(k, Solution, Prediction))\n",
+    "            one_er = self.one_error(k, Solution, Prediction)\n",
+    "            av_er += one_er\n",
+    "            error_list.append(one_er)\n",
+    "            max_er = max(max_er, one_er)\n",
+    "            min_er = min(min_er, one_er)\n",
+    "        \n",
+    "        if len(self.test) == 0: av_er = av_er\n",
+    "        else: av_er = av_er/len(self.test)\n",
+    "        \n",
+    "        self.er = er\n",
+    "        self.l2 = l2\n",
+    "        self.av_er = av_er\n",
+    "        self.max_er = max_er\n",
+    "        self.min_er = min_er\n",
+    "        self.std_er = np.std(error_list)\n",
+    "        self.error_list = error_list\n",
     "        \n",
     "        if full:\n",
     "            if show: print(\"Total relative error for all test cases:\", er/l2)\n",
     "            return er/l2\n",
     "        else:\n",
-    "            if show: print(\"Average error over all test cases:\", av_er/len(self.test))\n",
+    "            if show: print(\"Average error over all test cases:\", av_er)\n",
     "            if maxi: \n",
     "                print('')\n",
     "                print(\"Maximum relative error among test cases:\", max_er)\n",
-    "            return av_er/len(self.test)"
+    "            if mini: \n",
+    "                print('')\n",
+    "                print(\"Minimum relative error among test cases:\", min_er)\n",
+    "            return av_er"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -238,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
