update to burger and alg 2 -> float32

--- a/Burgers_no_noise_visc_estimate.ipynb
+++ b/Burgers_no_noise_visc_estimate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,17 +29,17 @@
     "\n",
     "a, b, s, t = -8, 8, 0, 10 # space-time boundaries\n",
     "\n",
-    "X_, T_ = np.linspace(a,b,513), np.linspace(s,t,501) # space-time grid for generating solutions\n",
+    "X_, T_ = np.linspace(a,b,513), np.linspace(s,t,1001) # space-time grid for generating solutions\n",
     "x_space = 1\n",
     "t_space = 10\n",
     "X, T = X_[::x_space], T_[::t_space] # space-time grid of observed points. O_X and O_T\n",
     "\n",
-    "eps = 0.2 #Viscosity\n",
+    "eps = 0.1 #Viscosity\n",
     "\n",
-    "k = 120 # Number of realizations (multiple of 3)\n",
-    "m = 20 # Number of test cases, m < k\n",
+    "k = 60 # Number of realizations (multiple of 3)\n",
+    "m = 10 # Number of test cases, m < k\n",
     "\n",
-    "N = 1 # Number of experiments\n",
+    "N = 2 # Number of experiments\n",
     "\n",
     "noise = 0.0 #noise intensity\n",
     "\n",
@@ -77,6 +77,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Creating Model\n",
+      "Numerical Scheme for Algorithm 2 failed for 0 equation with the above coefficients.\n",
+      "Creating Model\n",
+      "Numerical Scheme for PDE-FIND failed for 0 equation with the above coefficients.\n",
       "Creating Model\n"
      ]
     }
@@ -162,6 +166,51 @@
     "    exps_Alg2.append(show_no_outliers)\n",
     "    \n",
     "    \n",
+    "    #ESTIMATE VISCOSITY\n",
+    "    \n",
+    "    # Regression to determine viscosity from train cases\n",
+    "\n",
+    "    j = 0\n",
+    "\n",
+    "    u_t = np.array([(Burgers_true[i].iloc[j+1].values-Burgers_true[i].iloc[j]).values/(T[1]-T[0]) for i in range(k) if i not in test]).flatten()\n",
+    "\n",
+    "    dx = X[1]-X[0]\n",
+    "\n",
+    "    M = SPDE(BC = 'P').Parabolic_Matrix(len(X)-1, 1, dx, inverse = False)\n",
+    "\n",
+    "    u = np.array([Burgers_true[i].iloc[j].values for i in range(k) if i not in test])\n",
+    "    u_xx = np.array([np.dot(M, U) for U in u]).flatten()\n",
+    "\n",
+    "    visc = lin_reg().fit(u_xx.reshape(-1, 1), u_t)\n",
+    "    exps_v_coef.append(visc.coef_)\n",
+    "\n",
+    "    # Algorithm 2 on the true data with learnt viscosity eps\n",
+    "\n",
+    "    experiment_v = IML(Burgers,\n",
+    "                       Rule = R,\n",
+    "                       eps = visc.coef_,\n",
+    "                       height = height,\n",
+    "                       deg = deg,\n",
+    "                       T = T,\n",
+    "                       X = X,\n",
+    "                       step = 1) # initialize experiment for algorithm 2\n",
+    "    experiment_v.set_train_test(test = test) # initialize test set\n",
+    "\n",
+    "    experiment_v.trees = experiment_noise.trees # extract trees\n",
+    "\n",
+    "    experiment_v.initialize_Predictions() \n",
+    "\n",
+    "    experiment_v.training_models() # Create models for Step 2 of Algorithm 2\n",
+    "    \n",
+    "    experiment_v.fit_training_model() # Linear fit for Step 2 of Algorithm 2\n",
+    "    experiment_v.learn_with_fitted() # Recurcive steps 3 & 4 of Algorithm 2\n",
+    "    \n",
+    "    Prediction_v = experiment_v.to_df_list()\n",
+    "\n",
+    "    show_v = summary(experiment_v.test)\n",
+    "    er_find = show_v.errors(Burgers_true,Prediction_v, show = False)\n",
+    "    exps_v.append(show_v)\n",
+    "    \n",
     "    \n",
     "    #PDE-FIND\n",
     "    \n",
@@ -227,7 +276,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for exps in [exps_Alg2, exps_find]:\n",
+    "for exps in [exps_Alg2, exps_v, exps_find]:\n",
     "\n",
     "    print(\"Average average error:\", np.mean([e.av_er for e in exps]))\n",
     "    print(\"Maximum average error:\", max([e.av_er for e in exps]))\n",
@@ -245,6 +294,17 @@
     "    print('')\n",
     "\n",
     "    print(\"=====================\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Average viscosity:\", np.mean(exps_v_coef))\n",
+    "print(\"Maximum viscosity:\", max(exps_v_coef))\n",
+    "print(\"Minimum viscosity:\", min(exps_v_coef))"
    ]
   },
   {
