--- a/Algorithms/Algorithm_2.ipynb
+++ b/Algorithms/Algorithm_2.ipynb
@@ -42,13 +42,26 @@
     "\n",
     "class IML():\n",
     "    \n",
-    "    def __init__(self, Solutions, Rule, height, deg, eps = 1, step = 1, Noise = None, diff = True, train = None, test = None, trees = None, T = None, X = None):\n",
+    "    def __init__(self,\n",
+    "                 Solutions,\n",
+    "                 Rule,\n",
+    "                 height,\n",
+    "                 deg,\n",
+    "                 eps = 1,\n",
+    "                 step = 1,\n",
+    "                 Noise = None,\n",
+    "                 diff = True,\n",
+    "                 train = None,\n",
+    "                 test = None,\n",
+    "                 trees = None,\n",
+    "                 T = None,\n",
+    "                 X = None):\n",
     "        \n",
     "        if type(Solutions) == pd.core.frame.DataFrame:\n",
     "            n = Solutions.columns.levshape[0]\n",
     "            self.Sol = [Solutions['S'+str(i+1)] for i in range(n)]\n",
-    "            self.T = np.array(self.Sol[0].index).astype(np.float64) # time grid (O_T)\n",
-    "            self.X = np.array(self.Sol[0].columns).astype(np.float64) # space grid (O_X)\n",
+    "            self.T = np.array(self.Sol[0].index).astype(np.float32) # time grid (O_T)\n",
+    "            self.X = np.array(self.Sol[0].columns).astype(np.float32) # space grid (O_X)\n",
     "        else:\n",
     "            self.Sol = Solutions # set the solutions\n",
     "            self.T = T\n",
@@ -300,18 +313,11 @@
     "        return Predicted\n",
     "        "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -325,7 +331,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
