--- a/Classes/SPDEs.ipynb
+++ b/Classes/SPDEs.ipynb
@@ -13,12 +13,12 @@
     "from time import time\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "%run Classes/Noise.ipynb"
+    "%run Noise.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,6 @@
     "        \n",
     "        \n",
     "        return Solution.astype('float32')\n",
-    "        #return Solution\n",
     "    \n",
     "    # Solves 1D stochasrtic Wave equation, given numpy array of several noises and space time domain\n",
     "    def Wave(self, W, T = None, X = None, diff = True):\n",
@@ -207,7 +206,6 @@
     "            Solution[:,i,:] = Solution[:,i-1,:] + Solution_t[:,i,:]*dt\n",
     "            \n",
     "        return Solution.astype('float32')\n",
-    "        #return Solution\n",
     "    \n",
     "    # Solves 1D Burger's equation, given numpy array of several noises, space time domain and initial conditions\n",
     "    def Burgers(self, W, lambd = 1, diff = True, T = None, X = None, KdV = False):    \n",
@@ -252,7 +250,48 @@
     "            Solution[:,i,:] = np.dot(current.reshape((W.shape[0], len(X))), M)\n",
     "            \n",
     "        return Solution.astype('float32')\n",
-    "        #return Solution\n",
+    "    \n",
+    "    def Burgers_FFT(self, W, lambd = 1, diff = True, T = None, X = None):    \n",
+    "        # Extract increments, columns, time points and noise names\n",
+    "        if T is None: T = self.T\n",
+    "        if X is None: X = self.X\n",
+    "        \n",
+    "        # Extract specae-time increments and dW\n",
+    "        dW, _, dt = self.initialization(W, T, X, diff)\n",
+    "\n",
+    "        M, N = len(T), len(X)-1\n",
+    "        dx = X[-1]/N\n",
+    "        # Negative Laplacian in Fourier space \n",
+    "        k = 2*np.pi*np.fft.fftfreq(N, d = dx)\n",
+    "        lap = k**2\n",
+    "        lap_ = 0.5*dt*self.eps*lap\n",
+    "        \n",
+    "        # define initial conditions\n",
+    "    \n",
+    "        if type(self.IC) is np.ndarray:\n",
+    "            if self.IC.shape == (W.shape[0], N+1): #if initial conditions are given\n",
+    "                IC = self.IC\n",
+    "            else:\n",
+    "                IC = np.array([self.IC for _ in range(W.shape[0])]) # one initial condition\n",
+    "        else:\n",
+    "            initial = self.vectorized(self.IC, X) # setting initial condition for one solution\n",
+    "            IC = np.array([initial for _ in range(W.shape[0])]) #for every solution\n",
+    "        \n",
+    "        # Initialize\n",
+    "        soln = np.zeros(shape = W.shape, dtype='float32')\n",
+    "        soln[:,0,:] = IC.astype('float32')\n",
+    "        soln_h = np.fft.fft(IC[:,:-1], axis=-1).astype('complex64')\n",
+    "        diff = np.zeros(soln_h.shape, dtype='float32')\n",
+    "        \n",
+    "        for i in tqdm(range(1, M)):\n",
+    "            diff = self.discrete_diff(soln[:,i-1,:], len(X), flatten = False, higher = False)[:,:-1]/dx\n",
+    "            non_linearity = np.fft.fft( - lambd*soln[:,i-1,:-1]*diff*dt + self.sigma_(soln[:,i-1,:-1])*dW[:,i,:-1], axis=-1)\n",
+    "            \n",
+    "            soln_h = ((1.0 - lap_[None,:])*soln_h + non_linearity)/(1.0 + lap_[None,:])\n",
+    "            soln[:,i,:-1] = np.fft.ifft(soln_h, axis=-1).real\n",
+    "            soln[:,i,-1] = soln[:,i,0]\n",
+    "            \n",
+    "        return soln\n",
     "    \n",
     "    # Function that integrates trees required for the model. It applies operator I in paralel to many functions\n",
     "    # where I[f] is a solution to (\\partial_t - eps*\\Delta) I[f] = f with zero IC.\n",
@@ -291,6 +330,53 @@
     "        del integrated\n",
     "        del taus\n",
     "        \n",
+    "        return Jtau\n",
+    "    \n",
+    "    def Integrate_FFT_trees(self, tau, done = {}, exceptions = {}, derivative = False):\n",
+    "        \n",
+    "        # TODO: Allow spatial derivatives\n",
+    "\n",
+    "        #extract the trees from dictionary which are not purely polyniomials and were not already integrated\n",
+    "        trees = [tree for tree in tau.keys() if tree not in exceptions]\n",
+    "        trees = [tree for tree in trees if 'I[{}]'.format(tree) not in done and 'I[{}]'.format(tree) not in exceptions]\n",
+    "\n",
+    "        dt, M, N = self.T[1]-self.T[0], len(self.T), len(self.X)-1\n",
+    "        dx = self.X[-1]/N\n",
+    "        \n",
+    "        # array of trees in Fourier space mutliplied by dt\n",
+    "        taus = np.fft.fft(np.array([tau[t][:,:-1] for t in trees]), axis = -1).astype('complex64')*dt\n",
+    "        \n",
+    "        # Negative Laplacian in Fourier space \n",
+    "        k = 2*np.pi*np.fft.fftfreq(N, d = dx)\n",
+    "        lap = k**2\n",
+    "        lap_ = 0.5*dt*self.eps*lap\n",
+    "\n",
+    "        integrated_h = np.zeros(shape = (len(trees), M, N+1), dtype='complex64') # planted trees in Fourier space\n",
+    "\n",
+    "        # Finite difference method in Fourier space\n",
+    "        for i in range(1,M):\n",
+    "            \n",
+    "            integrated_h[:,i,:-1] = ((1.0 - lap_)*integrated_h[:,i-1,:-1] + taus[:,i,:])/(1.0 + lap_)\n",
+    "          \n",
+    "        integrated = np.zeros(integrated_h.shape, dtype='float32')\n",
+    "        integrated[:,:,:-1] = np.fft.ifft(integrated_h[:,:,:-1], axis = -1).real # put planted trees to the physical space\n",
+    "        integrated[:,:,-1] = integrated[:,:,0]\n",
+    "        del integrated_h\n",
+    "        \n",
+    "        Jtau = {}\n",
+    "        for i, t in enumerate(trees): # update dictionary and return integrated taus.\n",
+    "            Jtau['I[{}]'.format(t)] = integrated[i]\n",
+    "            if derivative and \"I'[{}]\".format(t) not in exceptions:\n",
+    "                # If derivative is true include also functions of the form \\partial_x I[f] that are denoted as I'[f]\n",
+    "                if derivative == 1 or derivative is True:\n",
+    "                    Jtau[\"I'[{}]\".format(t)] = self.discrete_diff(integrated[i], len(self.X), flatten = False, higher = False)/dx\n",
+    "                else:\n",
+    "                    # centralised differentiation\n",
+    "                    Jtau[\"I'[{}]\".format(t)] = self.discrete_diff(integrated[i], len(self.X), flatten = False, higher = True)/dx\n",
+    "        \n",
+    "        del integrated\n",
+    "        del taus\n",
+    "\n",
     "        return Jtau\n",
     "    \n",
     "    # Function that integrates trees required for the model. It applies operator I in paralel to many functions\n",
@@ -361,7 +447,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -375,7 +461,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
