--- a/Algorithms/Algorithm_2_FFT.ipynb
+++ b/Algorithms/Algorithm_2_FFT.ipynb
@@ -146,7 +146,7 @@
     "        W_ = np.zeros((l, time_grid_num+1, len(X_))) # No noise is present. \n",
     "        \n",
     "        # Compute I_c[u^pr_{t_k}]. Symbolically these will still be denoted by I[xi] in the model.\n",
-    "        lollipop = SPDE(Type = self.Type, BC = self.BC, eps = self.eps, IC = IC).Parabolic(W_, time_grid, X_)\n",
+    "        lollipop = SPDE(Type = self.Type, BC = self.BC, eps = self.eps, IC = IC).Heat_Equation_FFT(time_grid, X_)\n",
     "        \n",
     "        # Add \\partial_c I_c[u^pr_{t_k}] which will be symbolically denoted by I'[xi]\n",
     "        if self.diff:\n",
@@ -190,7 +190,7 @@
     "        \n",
     "        # Compute I_c[u_{t_k}]. Symbolically these will still be denoted by I[xi] in the model.\n",
     "        \n",
-    "        lollipop = SPDE(Type = self.Type, BC = self.BC, eps = self.eps, IC = IC).Parabolic(W_, time_grid, X)\n",
+    "        lollipop = SPDE(Type = self.Type, BC = self.BC, eps = self.eps, IC = IC).Heat_Equation_FFT(time_grid, X)\n",
     "        \n",
     "        # Initialize integration map I\n",
     "        I = SPDE(eps = self.eps, BC = self.BC, X = self.X, T = time_grid).Integrate_FFT_trees\n",
