--- a/Classes/SPDEs.ipynb
+++ b/Classes/SPDEs.ipynb
@@ -293,6 +293,39 @@
     "            \n",
     "        return soln\n",
     "    \n",
+    "    def Heat_Equation_FFT(self, T = None, X = None):    \n",
+    "        # Extract increments, columns, time points and noise names\n",
+    "        if T is None: T = self.T\n",
+    "        if X is None: X = self.X\n",
+    "        \n",
+    "        # Extract specae-time increments and dW\n",
+    "        dt = T[1]-T[0]\n",
+    "\n",
+    "        M, N = len(T), len(X)-1\n",
+    "        dx = X[-1]/N\n",
+    "        # Negative Laplacian in Fourier space \n",
+    "        k = 2*np.pi*np.fft.fftfreq(N, d = dx)\n",
+    "        lap = k**2\n",
+    "        lap_ = 0.5*dt*self.eps*lap\n",
+    "        \n",
+    "        # define initial conditions\n",
+    "        \n",
+    "        integrated = np.zeros(shape = (self.IC.shape[0], M, N+1), dtype='float32')\n",
+    "        integrated[:,0,:] = self.IC\n",
+    "        integrated_h = np.zeros(shape = (self.IC.shape[0], M, N), dtype='complex64')\n",
+    "        integrated_h[:,0,:] = np.fft.fft(self.IC[:,:-1], axis=-1).astype('complex64')\n",
+    "        \n",
+    "        # Finite difference method in Fourier space\n",
+    "        for i in tqdm(range(1,M)):\n",
+    "            \n",
+    "            integrated_h[:,i] = ((1.0 - lap_)*integrated_h[:,i-1])/(1.0 + lap_)\n",
+    "        \n",
+    "        integrated[:,1:,:-1] = np.fft.ifft(integrated_h[:,1:,:], axis = -1).real # put planted trees to the physical space\n",
+    "        integrated[:,:,-1] = integrated[:,:,0]\n",
+    "        del integrated_h\n",
+    "\n",
+    "        return integrated\n",
+    "    \n",
     "    # Function that integrates trees required for the model. It applies operator I in paralel to many functions\n",
     "    # where I[f] is a solution to (\\partial_t - eps*\\Delta) I[f] = f with zero IC.\n",
     "    \n",
